--- a/login.html
+++ b/login.html
@@ -90,6 +90,6 @@
     <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
     <!-- 載入方式：Vue CDN -->
-    <script type="module" src="/login.js"></script>
+    <script type="module" src="login.js"></script>
   </body>
 </html>
