--- a/week3.html
+++ b/week3.html
@@ -224,7 +224,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-  <script src="week3.js" type="module"></script>
+  <script type="module" src="week3.js" ></script>
 </body>
 
 </html>
